compiler/tests/success/break_stmt.frx
i32 main()
{
    while(true)
    {
        break;
    }

    return 0;
}
