compiler/tests/fail/immutable_reassign.frx
i32 main()
{
    i32 value = 4;
    value = 3;

    return value;
}
